Bug 361833 - next/previous icons missing on buttons in search
Summary: next/previous icons missing on buttons in search
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: frameworks
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-15 19:44 UTC by Christian (Fuchs)
Modified: 2016-06-30 11:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2016-04-15 19:44:22 UTC
Apparently in the KF5 version the icons on prev/next buttons in the search are missing. 

Icon set used is the default (breeze)

Reproducible: Always

Steps to Reproduce:
1. Open the search (Ctrl+F)
2. Look at the prev / next buttons


Actual Results:  
They don't have an icon but blank space on the left

Expected Results:  
They have an icon or no blank space on the left
Comment 1 Heiko Becker 2016-06-30 11:48:18 UTC
Git commit 257902f50773041d5c3d232063acf7306aa6b9c7 by Heiko Becker.
Committed on 30/06/2016 at 11:46.
Pushed by heikobecker into branch '1.6'.

searchbar: Use QIcon::fromTheme to get next/previous icons

The icons on the next and previous buttons in the searchbar were
missing because QIcon(QString) expects a path containing a file
name, but was given an icon name.
REVIEW: 128321

M  +3    -1    src/viewer/searchbar.cpp

http://commits.kde.org/konversation/257902f50773041d5c3d232063acf7306aa6b9c7