searchbar: Use QIcon::fromTheme to get next/previous icons

The icons on the next and previous buttons in the searchbar were
missing because QIcon(QString) expects a path containing a file
name, but was given an icon name.

BUG: 361833
REVIEW: 128321